# Banck

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_chat_tables.py  0002_admin_thread_meta_audit.py
apps/api/scripts/: write_openapi_snapshot.py
apps/api/spektors_api/: __init__.py  api_errors.py  docs_ui.py  main.py  openapi.py
apps/api/spektors_api/common/: __init__.py  path_ids.py
apps/api/spektors_api/config/: __init__.py  apps.py
apps/api/spektors_api/database/: __init__.py  admin_repository.py  chat_repository.py  pool.py
apps/api/spektors_api/integrations/: __init__.py  chroma_client.py  embed_ollama.py  ollama_common.py  ollama_http.py
apps/api/spektors_api/middleware/: __init__.py  rate_limit.py  request_id.py
apps/api/spektors_api/routers/: __init__.py  admin_chat.py  admin_ws.py  chat.py  llm.py  rag.py
apps/api/spektors_api/schemas/: __init__.py
apps/api/spektors_api/security/: __init__.py  app_id.py  internal_auth.py  tokens.py
apps/api/spektors_api/static/docs_assets/: redoc-wrap.css  swagger-theme.css
apps/api/tests/: test_api_errors_unit.py  test_integration_chat.py  test_internal_auth.py  test_openapi_contract.py  test_openapi_snapshot.py  test_tokens.py
config/: apps.yaml
docs/: API_CHANGELOG.md  DESKTOP_LAUNCHER_TZ.md  FRONTEND_TZ.md  PROJECT_IMPROVEMENT_SPEC.md  SECURITY.md  SPEKTORS_DESKTOP_IMPROVEMENTS_TZ.md  (+1 more)
(+109 files in other folders)
